<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenShift Android</string>
    <string name="hello">Hello openshift-android!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="openshift_title">Hello OpenShift</string>
    <string name="view_openshift_account">View OpenShift Account Information</string>
    <string name="openshift_public_base_url">https://openshift.redhat.com/broker/rest</string>
    <string name="openshift_domain_title">Openshift Domains</string>
    <string name="account_title">Openshift Account</string>
    <string name="password_title">Password</string>
    <string name="login_title">Login</string>
    <string name="create_account_title">Create an OpenShift Account</string>
    <string name="info">Info</string>
    <string name="cartridges">Cartridges</string>
    <string name="aliases">Aliases</string>
    <string name="start_application">Start Application</string>
    <string name="stop_application">Stop Application</string>
    <string name="restart_application">Restart Application</string>
    <string name="delete_application">Delete Application</string>
    <string name="create_application">Create Application</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="view_application">View Application</string>
    <string name="add">Add</string>        
    <string name="create_alias">Create Alias</string>
    <color name="white">#FFFFFF</color>
    <string name="start_cartridge">Start Cartridge</string>
    <string name="stop_cartridge">Stop Cartridge</string>
    <string name="restart_cartridge">Restart Cartridge</string>
    <string name="delete_cartridge">Delete Cartridge</string>
    <string name="add_cartridge">Add Cartridge</string>
    <string name="reload_cartridge">Reload Cartridge</string>
    <string name="create_cartridge">Create Cartridge</string>
    <string name="empty_aliases">No Aliases Exist</string>
    <string name="empty_domains">No Aliases Exist</string>
    <string name="empty_applications">No Applications Exist</string>
    <string name="empty_cartridges">No Cartridges Exist</string>
    <string name="openshift_online">OpenShift Online</string>
    <string name="openshift_enterprise">OpenShift Enterprise</string>
    <string name="url">URL</string>
    

</resources>