<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   
    <item
        android:id="@+id/menu_cartridge_start"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/start_cartridge"/>
        
    <item
        android:id="@+id/menu_cartridge_stop"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/stop_cartridge"/> 
        
    <item
        android:id="@+id/menu_cartridge_restart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/restart_cartridge"/>
    
    <item
        android:id="@+id/menu_cartridge_reload"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reload_cartridge"/>
    
    <item
        android:id="@+id/menu_cartridge_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_cartridge"/>
    
                       
</menu>