<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   
    <item
        android:id="@+id/menu_application_start"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/start_application"/>
        
    <item
        android:id="@+id/menu_application_stop"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/stop_application"/> 
        
    <item
        android:id="@+id/menu_application_restart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/restart_application"/>
    
        
    <item
        android:id="@+id/menu_application_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_application"/>
    
                      
</menu>